--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@ project(GameProj)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 add_subdirectory(GameProj)
 add_subdirectory(Pigu)
