updated CMake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
+if(WIN32)
+	add_definitions(-DPIGU_WINDOWS)
+elseif(APPLE)
+	add_definitions(-DPIGU_MACOS)
+elseif(UNIX)
+	add_definitions(-DPIGU_LINUX)
+endif()
+
 add_subdirectory(GameProj)
 add_subdirectory(Pigu)
 add_subdirectory(glfw)
