--- a/Pigu/CMakeLists.txt
+++ b/Pigu/CMakeLists.txt
@@ -4,13 +4,13 @@ set(HEADER_FILES
 	PiguUtil.h
 	GWindow.h
 	WindowImplement.h
-	specificGLFW/GlfwWindow.h
+	specificGLFW/PiguGlfwWindow.h
 	)
 
 set(SOURCE_FILES 
 	PiguApp.cpp
 	GWindow.cpp
-	specificGLFW/GlfwWindow.cpp
+	specificGLFW/PiguGlfwWindow.cpp
 	)
 
 add_library(Pigu SHARED ${HEADER_FILES} ${SOURCE_FILES})
