changed file name of pch to pchPigu

--- a/Pigu/CMakeLists.txt
+++ b/Pigu/CMakeLists.txt
@@ -21,6 +21,6 @@ add_definitions(-DPIGU_DEBUG)
 include_directories(../glfw/include)
 include_directories(../Pigu)
 
-target_precompile_headers(Pigu PRIVATE pch.h)
+target_precompile_headers(Pigu PRIVATE pchPigu.h)
 
 target_link_libraries(Pigu glfw)
