--- a/Pigu/Pigu.vcxproj
+++ b/Pigu/Pigu.vcxproj
@@ -157,8 +157,8 @@
     <ClInclude Include="pchPigu.h" />
     <ClInclude Include="Pigu.h" />
     <ClInclude Include="PiguApp.h" />
+    <ClInclude Include="piguGLFW\PiguGlfwWindow.h" />
     <ClInclude Include="PiguUtil.h" />
-    <ClInclude Include="specificGLFW\PiguGlfwWindow.h" />
     <ClInclude Include="WindowImplement.h" />
   </ItemGroup>
   <ItemGroup>
@@ -170,7 +170,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PiguApp.cpp" />
-    <ClCompile Include="specificGLFW\PiguGlfwWindow.cpp" />
+    <ClCompile Include="piguGLFW\PiguGlfwWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\glfw\build\src\glfw.vcxproj">
