--- a/Pigu/Pigu.vcxproj.filters
+++ b/Pigu/Pigu.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClInclude Include="WindowImplement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="specificGLFW\PiguGlfwWindow.h">
+    <ClInclude Include="piguGLFW\PiguGlfwWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -47,7 +47,7 @@
     <ClCompile Include="GWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="specificGLFW\PiguGlfwWindow.cpp">
+    <ClCompile Include="piguGLFW\PiguGlfwWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
