--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,5 @@ endif()
 add_subdirectory(GameProj)
 add_subdirectory(Pigu)
 add_subdirectory(glfw)
+add_subdirectory(PiguGlad)
+add_subdirectory(Pigustbi)
