--- a/GameProj/GameProj.vcxproj
+++ b/GameProj/GameProj.vcxproj
@@ -143,12 +143,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PiguEntity.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pigu\Pigu.vcxproj">
       <Project>{3a5ecbc5-ebe6-478f-9a4a-c4e973d53a4e}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameApp.h" />
+    <ClInclude Include="PiguEntity.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
