--- a/Pigu/Pigu.vcxproj
+++ b/Pigu/Pigu.vcxproj
@@ -157,7 +157,9 @@
     <ClInclude Include="pchPigu.h" />
     <ClInclude Include="Pigu.h" />
     <ClInclude Include="PiguApp.h" />
+    <ClInclude Include="PiguEvents.h" />
     <ClInclude Include="piguGLFW\PiguGlfwWindow.h" />
+    <ClInclude Include="PiguKeyCodes.h" />
     <ClInclude Include="piguOpenGL\PiguOpenGLRenderer.h" />
     <ClInclude Include="piguOpenGL\PiguOpenGLShader.h" />
     <ClInclude Include="piguOpenGL\PiguOpenGLSprite.h" />
@@ -179,6 +181,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PiguApp.cpp" />
+    <ClCompile Include="PiguEvents.cpp" />
     <ClCompile Include="piguGLFW\PiguGlfwWindow.cpp" />
     <ClCompile Include="piguOpenGL\PiguOpenGLRenderer.cpp" />
     <ClCompile Include="piguOpenGL\PiguOpenGLShader.cpp" />
