--- a/Pigu/Pigu.vcxproj.filters
+++ b/Pigu/Pigu.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClInclude Include="piguOpenGL\PiguOpenGLRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PiguEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PiguKeyCodes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PiguApp.cpp">
@@ -93,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="piguOpenGL\PiguOpenGLRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PiguEvents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
