--- a/PiguGlad/CMakeLists.txt
+++ b/PiguGlad/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(PiguGlad SHARED src/glad.c)
+add_library(PiguGlad STATIC src/glad.c include/glad/glad.h)
 
 include_directories(include)
